# mlt

src/examples/: CMakeLists.txt
src/framework/: CMakeLists.txt
src/mlt++/: CMakeLists.txt
src/modules/core/: CMakeLists.txt
src/modules/sdl2/: CMakeLists.txt
